--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,6 +22,10 @@ dependencies {
     implementation 'com.google.guava:guava:31.0.1-jre'
     
     implementation 'info.picocli:picocli:4.7.0'
+
+    implementation 'com.fasterxml.jackson.core:jackson-annotations:2.14.0'
+    implementation 'com.fasterxml.jackson.core:jackson-databind:2.14.0'
+
 }
 
 jar {
