--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,8 +45,7 @@ task copyFile(type: Copy){
     into "$buildDir/libs"
 }
 
-tasks.named('test') {
-    // Use JUnit Platform for unit tests.
+test {
     useJUnitPlatform()
 }
 
