coverallsのライブラリを追加した。

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,6 +30,7 @@ dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.2'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.2'
 
+    implementation 'org.eluder.coveralls:coveralls-maven-plugin:4.3.0'
 }
 
 jar {
