--- a/app/build.gradle
+++ b/app/build.gradle
@@ -67,7 +67,7 @@ reporting {
 }
 
 jacocoTestReport {
-    dependsOn test // tests are required to run before generating the report
+    dependsOn test
 }
 
 tasks.named('check') {
@@ -78,7 +78,6 @@ tasks.named('check') {
 coveralls {
     sourceDirs = subprojects.sourceSets.main.allSource.srcDirs.flatten()
     jacocoReportPath = "${buildDir}/reports/jacoco/jacocoRootReport/jacocoRootReport.xml"
-    // jacocoReportPath = "${buildDir}/reports/jacoco/testCodeCoverageReport/testCodeCoverageReport.xml"
 }
 
 task copyFile(type: Copy){
@@ -90,7 +89,6 @@ task copyFile(type: Copy){
 test {
     useJUnitPlatform()
     finalizedBy jacocoTestReport
-
 }
 
 application {
