--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,14 +23,17 @@ repositories {
     // Use Maven Central for resolving dependencies.
     gradlePluginPortal()
     mavenCentral()
-}
+    maven {
+    url "https://tamada.github.io/maven"
+  }
+  }
 
 dependencies {
     // This dependency is used by the application.
     implementation 'com.google.guava:guava:31.0.1-jre'
 
     implementation 'info.picocli:picocli:4.7.0'
-
+    implementation group: 'jp.cafebabe', name: 'diranger', version: '1.0.0'
     implementation 'com.fasterxml.jackson.core:jackson-annotations:2.14.0'
     implementation 'com.fasterxml.jackson.core:jackson-databind:2.14.0'
 
