--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,12 +33,13 @@ dependencies {
     implementation 'com.google.guava:guava:31.0.1-jre'
 
     implementation 'info.picocli:picocli:4.7.0'
-    implementation group: 'jp.cafebabe', name: 'diranger', version: '1.0.0'
     implementation 'com.fasterxml.jackson.core:jackson-annotations:2.14.0'
     implementation 'com.fasterxml.jackson.core:jackson-databind:2.14.0'
 
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.2'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.2'
+
+    implementation group: 'jp.cafebabe', name: 'diranger', version: '1.0.0-beta-1'
 }
 
 shadowJar {
