--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,6 +23,9 @@ repositories {
     // Use Maven Central for resolving dependencies.
     gradlePluginPortal()
     mavenCentral()
+    maven {
+    url "https://tamada.github.io/maven"
+    }
 }
 
 dependencies {
@@ -36,6 +39,8 @@ dependencies {
 
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.2'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.2'
+
+    implementation group: 'jp.cafebabe', name: 'diranger', version: '1.0.0-beta-1'
 }
 
 shadowJar {
