--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,7 +61,7 @@ jacoco {
 jacocoTestReport {
     dependsOn test
     reports {
-        xml.required = false
+        xml.required = true
         html.required = false
     }
 }
