--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,7 +62,7 @@ jacocoTestReport {
     dependsOn test
     reports {
         xml.required = true
-        html.required = false
+        html.required = true
     }
 }
 
